--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -1,4 +1,9 @@
 <h2><a ng-href="#/">Booty Chart v10.0</a></h2>
 <a ng-href="#/graph">graph</a>
-<a ng-href="#/login">login</a>
-<a ng-href="#/register">register</a>
+<a ng-hide="currentUser" ng-href="#/login">login</a>
+<a ng-hide="currentUser" ng-href="#/register">register</a>
+<div ng-controller="StatusController" ng-show="currentUser">
+	<span>You're logged in as {{ currentUser.firstname }}</span>
+	<a ng-href="#/logout" ng-click="authObj.$unauth()">Logout</a></a>
+</div>
+
